Set height of <picture> to match container to prevent image shifting as viewport height changes

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -11,20 +11,21 @@
   position: relative;
   padding: 0 2rem;
   box-shadow: 0 -2px 10px rgba($color-black, 0.3);
+  height: var(--height);
 
   display: grid;
   place-content: center;
 
   &--landing {
-    height: 46rem;
+    --height: 46rem;
 
     @include media-max(640px) {
-      height: 52rem;
+      --height: 52rem;
     }
   }
 
   &--normal {
-    height: 30rem;
+    --height: 30rem;
   }
 
   &__background {
@@ -42,7 +43,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: var(--height);
 
       .header__background-img {
         width: 100%;
